# Kikyo

./: .gitignore  Cargo.toml  README.md  chord_specs.md  test_dfn.txt  test_dfn_repro.txt  test_dfn_verify.txt  test_engine_all.txt
crates/kikyo-core/: Cargo.toml
crates/kikyo-core/benches/: hot_paths.rs
crates/kikyo-core/examples/: parser_test.rs  simple_hook.rs
crates/kikyo-core/src/: chord_engine.rs  engine.rs  engine_test_placeholder.rs  ime.rs  jis_map.rs  keyboard_hook.rs  lib.rs  parser.rs  romaji_map.rs  types.rs  verify_ime_quotes.rs
crates/kikyo-core/tests/: regression_same_key_repress.rs
crates/kikyo-ui-tauri/: package-lock.json  package.json
crates/kikyo-ui-tauri/src/: index.html  main.js  styles.css
crates/kikyo-ui-tauri/src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
crates/kikyo-ui-tauri/src-tauri/capabilities/: default.json
crates/kikyo-ui-tauri/src-tauri/icons/: icon.icns
crates/kikyo-ui-tauri/src-tauri/src/: lib.rs  main.rs
crates/kikyo-ui-tauri/src/components/: aboutContributors.js
layout/: NICOLA.yab  sin-geta.yab  新下駄.yab  薙刀式配列v15Fix版(仮)(JIS縦書き) .kky
target_test/: .rustc_info.json
test_data/: dummy.yab.utf8  新下駄.yab  新下駄_test.yab
