[package]
name = "kikyo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
lazy_static = "1.4"
encoding_rs = "0.8" # For Shift-JIS / UTF-16 decoding if needed
# windows crate
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_Ime",
] }

[dev-dependencies]
tracing-subscriber = "0.3"
