[package]
name = "kikyo-ui-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kikyo_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kikyo-core = { path = "../../kikyo-core" }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"

